Fixed desktop button alignment

--- a/style/default.css
+++ b/style/default.css
@@ -191,4 +191,8 @@ button i {
   #about {
     background-color: inherit;
   }
+
+  #github__button {
+    text-align: left;
+  }
 }
